--- a/Chiara_converter.ipynb
+++ b/Chiara_converter.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
     "\n",
     "    u_bus = 500                                 #bus voltage\n",
     "    u_load = 400                                #motor voltage\n",
-    "    i_load = 200000/u_load                      #motor current\n",
+    "    i_load = 100000/u_load                      #motor current\n",
     "    f = 30*10**3                                #commutation frequency\n",
     "    #C = 1300*10**(-6)                           #capacitance\n",
     "    L = 50*10**(-6)                             #resistance\n",
@@ -77,29 +77,47 @@
     "    print('Diode Commutation Losses', Com_diode, 'W')\n",
     "    return \n",
     "\n",
-    "    "
+    "    \n",
+    "def converter_mass():\n",
+    "    P_max = 100000      #[W]\n",
+    "    P_pe = 15000        #[W/kg] from EIS2025\n",
+    "\n",
+    "\n",
+    "    mass_conv = P_max/P_pe\n",
+    "\n",
+    "    rho = 3000          #[kg/m^3] virtual density\n",
+    "    #Volume = 0.2x0.7xL_pe = mass/rho\n",
+    "    L_pe = mass_conv/(rho*0.2*0.7)\n",
+    "\n",
+    "    print('The mass of the converter is ', mass_conv, 'kg')\n",
+    "    print('Box volume ', '0.2x0.7x', L_pe, ' m^3')\n",
+    "    return\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inductor Conduction Losses =  25023.703703703704 W\n",
-      "IGBT Conduction Losses =  1040.6068148148147 W\n",
-      "Diode Conduction Losses =  190.08533333333327 W\n",
-      "Capacitor Conduction Losses =  4018.962962962961 W\n",
-      "IGBT Commutation Losses 1708.333333333333 W\n",
-      "Diode Commutation Losses 275.0 W\n"
+      "Inductor Conduction Losses =  6273.7037037037035 W\n",
+      "IGBT Conduction Losses =  521.2136296296296 W\n",
+      "Diode Conduction Losses =  95.17066666666663 W\n",
+      "Capacitor Conduction Losses =  1018.9629629629628 W\n",
+      "IGBT Commutation Losses 854.1666666666665 W\n",
+      "Diode Commutation Losses 137.5 W\n",
+      "The mass of the converter is  6.666666666666667 kg\n",
+      "Box volume  0.2x0.7x 0.015873015873015872  m^3\n"
      ]
     }
    ],
    "source": [
-    "conduction_losses()"
+    "conduction_losses()\n",
+    "\n",
+    "converter_mass()"
    ]
   }
  ],
