--- a/Chiara_gearbox.ipynb
+++ b/Chiara_gearbox.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -100,13 +100,15 @@
      "text": [
       "for a reduction ratio =  1.7045454545454546 the weigth factor =  6.196687327823692 is in line with the graph in the article\n",
       "Gear mass =  27.391154130235158 kg\n",
-      "Lifetime =  302.3763024935018 hours - with maximum thrust\n",
-      "Lifetime =  4319.210991713724 hours - with average thrust\n"
+      "Mass =  0.0030732105554671266 kg\n",
+      "Lifetime =  3.920385194557279 hours - with maximum thrust\n",
+      "Lifetime =  55.99966228982987 hours - with average thrust\n"
      ]
     }
    ],
    "source": [
     "from scipy.optimize import fsolve\n",
+    "import numpy as np\n",
     "\n",
     "def offset():\n",
     "\n",
@@ -151,12 +153,14 @@
     "    L10 = (Cd/Thrust)**3*10**6/(60*2250)\n",
     "    L10_ave = (Cd/T_ave)**3*10**6/(60*2250)\n",
     "\n",
+    "    print('Mass = ', M, 'kg')\n",
     "    print('Lifetime = ', L10, 'hours - with maximum thrust')\n",
     "    print('Lifetime = ', L10_ave, 'hours - with average thrust')\n",
     "    \n",
-    "    return\n",
+    "    return \n",
     "\n",
-    "bearing(3500, 1442.5, 5)"
+    "bearing(3500, 1442.5, 1)\n",
+    "\n"
    ]
   }
  ],
