Implementation of excel file for converter and put all together in the file Total

--- a/Chiara_gearbox.ipynb
+++ b/Chiara_gearbox.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "Willis starts on the assumption that the weight of a gear system is approximately proportional to the sum of the solid rotor volumes. In particular, for a simple offset gearbox it can be obtained that:\n",
     "\n",
-    "$\\sum \\frac{Fd^2}{C} = 1+\\frac{1}{m_g}+m_g+m_g^2+$, where $\\frac{Fd^2}{C}$ represents the weight factor, $C = \\frac{2T}{K}$, $m_g$ is the total reduction ratio.\n",
+    "$\\sum \\frac{Fd^2}{C} = 1+\\frac{1}{m_g}+m_g+m_g^2$, where $\\frac{Fd^2}{C}$ represents the weight factor, $C = \\frac{2T}{K}$, $m_g$ is the total reduction ratio.\n",
     "\n",
     "K is a factor that depends on materials, severity of service, desired life and applications and in our case the value of 6.9E+6 is taken as a guide.\n",
     "\n",
@@ -49,21 +49,13 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gear mass =  [43.45112835] kg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from scipy.optimize import fsolve\n",
     "\n",
     "def offset_with_idler():\n",
     "\n",
-    "    M0 = 3750/2200       #optimal motor RPM wrt propeller RPM\n",
+    "    M0 = 3963/2500       #optimal motor RPM wrt propeller RPM\n",
     "\n",
     "    def func(x):\n",
     "        return x*3+x**2-M0**2-1\n",
@@ -79,7 +71,7 @@
     "    print('Gear mass = ', M, 'kg')\n",
     "    return \n",
     "\n",
-    "offset_with_idler()"
+    "#offset_with_idler()"
    ]
   },
   {
@@ -91,18 +83,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "for a reduction ratio =  1.7045454545454546 the weigth factor =  6.196687327823692 is in line with the graph in the article\n",
-      "Gear mass =  27.391154130235158 kg\n",
-      "Mass =  0.0030732105554671266 kg\n",
-      "Lifetime =  3.920385194557279 hours - with maximum thrust\n",
-      "Lifetime =  55.99966228982987 hours - with average thrust\n"
+      "for a reduction ratio =  1.5852 the weigth factor =  5.728894265839011 is in line with the graph in the article\n",
+      "Gear mass =  14.0544721282594 kg\n",
+      "Mass =  0.0056458482997722905 kg\n",
+      "Lifetime =  10.5442974648446 hours - with maximum thrust\n",
+      "Lifetime =  150.617112301764 hours - with average thrust\n"
      ]
     }
    ],
@@ -111,11 +103,11 @@
     "import numpy as np\n",
     "\n",
     "def offset():\n",
-    "\n",
-    "    M0 = 3750/2200       #optimal motor RPM wrt propeller RPM\n",
+    "    \n",
+    "    M0 = 3963/2500       #optimal motor RPM wrt propeller RPM\n",
     "\n",
     "    mg = M0\n",
-    "    T = 1000             #motor reference torque [Nm]\n",
+    "    T = 555              #motor torque [Nm]\n",
     "    K = 6.9*10**6        #coefficient\n",
     "    Fd2 = 2*T/K*(1+1/mg+mg+mg**2)        #weight factor\n",
     "\n",
@@ -135,7 +127,7 @@
     "    #Thrust is the maximum thrust\n",
     "    #T_ave is the average thrust (not linear but <T>^3)\n",
     "\n",
-    "    C0_ref = 12.2*10**3\n",
+    "    C0_ref = 12.2*10**3 #18.6*10**3 \n",
     "    C0_SL = Thrust*k/C0_ref\n",
     "    M_SL = C0_SL**(3/2)\n",
     "    l_SL = C0_SL**(1/2)\n",
@@ -143,15 +135,15 @@
     "\n",
     "    M_ref = 0.02\n",
     "    D_ext_ref = 24*10**(-3)\n",
-    "    Cd_ref = 8.71*10**3\n",
+    "    Cd_ref = 8.71*10**3 #12.3*10**3 \n",
     "\n",
     "    M = M_ref*M_SL\n",
     "    D_ext = D_ext_ref*l_SL\n",
     "    Cd = Cd_ref*Cd_SL\n",
     "\n",
     "    \n",
-    "    L10 = (Cd/Thrust)**3*10**6/(60*2250)\n",
-    "    L10_ave = (Cd/T_ave)**3*10**6/(60*2250)\n",
+    "    L10 = (Cd/Thrust)**3*10**6/(60*2500)\n",
+    "    L10_ave = (Cd/T_ave)**3*10**6/(60*2500)\n",
     "\n",
     "    print('Mass = ', M, 'kg')\n",
     "    print('Lifetime = ', L10, 'hours - with maximum thrust')\n",
@@ -159,7 +151,7 @@
     "    \n",
     "    return \n",
     "\n",
-    "bearing(3500, 1442.5, 1)\n",
+    "bearing(3500, 1442.5, 1.5)\n",
     "\n"
    ]
   }
