--- a/Chiara_converter.ipynb
+++ b/Chiara_converter.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,17 +34,17 @@
     "\n",
     "    u_bus = 500                                 #bus voltage\n",
     "    u_load = 400                                #motor voltage\n",
-    "    i_load = 269000/u_load                      #motor current\n",
+    "    i_load = 279000/u_load                      #motor current\n",
     "    f = 30*10**3                                #commutation frequency\n",
-    "    #C = 1300*10**(-6)                           #capacitance\n",
-    "    L = 50*10**(-6)                             #resistance\n",
+    "    #C = 1300*10**(-6)                          #capacitance [Farad (F)]\n",
+    "    L = 50*10**(-6)                             #inductance [Henry (H)]\n",
     "    V0 = 1                                      #voltage drop both for IGBT and diode\n",
     "    I_SL_IGBT = i_load/80                       \n",
     "    R0_IGBT = 1/I_SL_IGBT*20*10**(-3)           #dynamic resistance igbt\n",
     "    I_SL_diode = i_load/60                      \n",
     "    R0_diode = 1/I_SL_diode*15*10**(-3)         #dynamic resistance diode\n",
-    "    Rl = 10**(-1)                               \n",
-    "    Rs = 10**(-1)\n",
+    "    Rl = 10**(-3)                               \n",
+    "    Rs = 10**(-3)\n",
     "\n",
     "    alpha = u_load/u_bus  # <= 1\n",
     "\n",
@@ -79,7 +79,7 @@
     "\n",
     "    \n",
     "def converter_mass():\n",
-    "    P_max = 269000      #[W]\n",
+    "    P_max = 279000      #[W]\n",
     "    P_pe = 15000        #[W/kg] from EIS2025\n",
     "\n",
     "\n",
@@ -87,30 +87,30 @@
     "\n",
     "    rho = 3000          #[kg/m^3] virtual density\n",
     "    #Volume = 0.2x0.7xL_pe = mass/rho\n",
-    "    L_pe = mass_conv/(rho*0.2*0.7)\n",
+    "    L_pe = mass_conv/(rho*0.1*0.5)\n",
     "\n",
     "    print('The mass of the converter is ', mass_conv, 'kg')\n",
-    "    print('Box volume ', '0.2x0.7x', L_pe, ' m^3')\n",
+    "    print('Box volume ', '0.1x0.5x', L_pe, ' m^3')\n",
     "    return\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inductor Conduction Losses =  45249.328703703715 W\n",
-      "IGBT Conduction Losses =  1399.251163431089 W\n",
-      "Diode Conduction Losses =  255.61344485749683 W\n",
-      "Capacitor Conduction Losses =  7255.062962962966 W\n",
-      "IGBT Commutation Losses 2297.708333333333 W\n",
-      "Diode Commutation Losses 369.875 W\n",
-      "The mass of the converter is  17.933333333333334 kg\n",
-      "Box volume  0.2x0.7x 0.0426984126984127  m^3\n"
+      "Inductor Conduction Losses =  486.743287037037 W\n",
+      "IGBT Conduction Losses =  1451.2349926987922 W\n",
+      "Diode Conduction Losses =  265.1111708482676 W\n",
+      "Capacitor Conduction Losses =  78.03062962962966 W\n",
+      "IGBT Commutation Losses 2383.125 W\n",
+      "Diode Commutation Losses 383.625 W\n",
+      "The mass of the converter is  18.6 kg\n",
+      "Box volume  0.1x0.5x 0.12400000000000001  m^3\n"
      ]
     }
    ],
