--- a/Chiara_converter.ipynb
+++ b/Chiara_converter.ipynb
@@ -14,110 +14,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "def conduction_losses():\n",
-    "    # u_bus     : bus voltage (300V in the paper)\n",
-    "    # u_load    : motor voltage (u_motor = u_FEM + u_R = k*omega + rT/k)\n",
-    "    # i_load    : motor current (i_motor = Power/u_load)\n",
-    "    # f         : frequency of the voltage (in the order of kHz)\n",
-    "    # C         : capacitance\n",
-    "    # L         : inductance\n",
-    "    # Rl\n",
-    "    # Rs\n",
-    "    # V0        : Voltage drop (1V)\n",
-    "    # R0        : Dynamic resistance (20 mOM) \n",
+    "def converter():\n",
     "\n",
-    "    u_bus = 500                                 #bus voltage\n",
-    "    u_load = 400                                #motor voltage\n",
-    "    i_load = 279000/u_load                      #motor current\n",
-    "    f = 30*10**3                                #commutation frequency\n",
-    "    #C = 1300*10**(-6)                          #capacitance [Farad (F)]\n",
-    "    L = 50*10**(-6)                             #inductance [Henry (H)]\n",
-    "    V0 = 1                                      #voltage drop both for IGBT and diode\n",
-    "    I_SL_IGBT = i_load/80                       \n",
-    "    R0_IGBT = 1/I_SL_IGBT*20*10**(-3)           #dynamic resistance igbt\n",
-    "    I_SL_diode = i_load/60                      \n",
-    "    R0_diode = 1/I_SL_diode*15*10**(-3)         #dynamic resistance diode\n",
-    "    Rl = 10**(-3)                               \n",
-    "    Rs = 10**(-3)\n",
-    "\n",
-    "    alpha = u_load/u_bus  # <= 1\n",
-    "\n",
-    "    # Current filtering equations\n",
-    "    Delta_iL = u_bus*(1-alpha)*alpha/(L*f) #inductor\n",
-    "\n",
-    "    #Current equations\n",
-    "    ind_RMS = i_load*np.sqrt(1+1/12*(Delta_iL/i_load)**2)\n",
-    "    IGBT_RMS = np.sqrt(alpha)*i_load*np.sqrt(1+1/12*(Delta_iL/i_load)**2)\n",
-    "    diode_RMS = np.sqrt(1-alpha)*i_load*np.sqrt(1+1/12*(Delta_iL/i_load)**2)\n",
-    "    cap_RMS = np.sqrt(alpha*(1-alpha))*i_load*np.sqrt(1+1/(12*(1-alpha))*(Delta_iL/i_load)**2)\n",
-    "\n",
-    "    #Conduction losses evaluation\n",
-    "    ind_loss = Rl*ind_RMS**2\n",
-    "    IGBT_loss = V0*alpha*i_load + R0_IGBT*IGBT_RMS**2\n",
-    "    diode_loss = V0*(1-alpha)*i_load + R0_diode*diode_RMS**2\n",
-    "    cap_loss = Rs*cap_RMS**2\n",
-    "\n",
-    "    #Commutation losses evaluation\n",
-    "    Com_IGBT = 8.2*10**(-3)/(80*450)*u_bus*i_load*f\n",
-    "    Com_diode = 1.32*10**(-3)/(60*600)*u_bus*i_load*f\n",
-    "\n",
-    "\n",
-    "    print('Inductor Conduction Losses = ', ind_loss, 'W')\n",
-    "    print('IGBT Conduction Losses = ', IGBT_loss, 'W')\n",
-    "    print('Diode Conduction Losses = ', diode_loss, 'W')\n",
-    "    print('Capacitor Conduction Losses = ', cap_loss, 'W')\n",
-    "\n",
-    "    print('IGBT Commutation Losses', Com_IGBT, 'W')\n",
-    "    print('Diode Commutation Losses', Com_diode, 'W')\n",
-    "    return \n",
-    "\n",
+    "    #Data\n",
+    "    E = 250                                 #bus voltage\n",
+    "    Il = 188                                #motor voltage\n",
+    "    Ul = 140                                #motor current\n",
     "    \n",
-    "def converter_mass():\n",
-    "    P_max = 279000      #[W]\n",
-    "    P_pe = 15000        #[W/kg] from EIS2025\n",
+    "\n",
+    "    #Design assumptions\n",
+    "    dE = 0.02*E                             #Max ripple voltage (2%)\n",
+    "    dI = 16.94/100*Il                       #Max ripple current (16.94%)\n",
+    "\n",
+    "   \n",
+    "   \n",
+    "    #Optimization variables\n",
+    "    f = 9098                                #switching frequency\n",
+    "    \n",
+    "    eD = 10**(-1)                            #airgap/diameter INDUCTOR\n",
+    "    J = 10.5*10**6                           #current density [A/mm^2] INDUCTOR\n",
+    "\n",
+    "    DH = 0.63                                #aspect ratio CAPACITOR\n",
+    "    kc = 1.5                                 #oversizing coefficient CAPACITOR\n",
+    "\n",
+    "    kIGBT = 3.3                              #oversizing coefficient IGBT\n",
+    "    Wh = 105                                 #width heatsink [mm] IGBT\n",
     "\n",
     "\n",
-    "    mass_conv = P_max/P_pe\n",
     "\n",
-    "    rho = 3000          #[kg/m^3] virtual density\n",
-    "    #Volume = 0.2x0.7xL_pe = mass/rho\n",
-    "    L_pe = mass_conv/(rho*0.1*0.5)\n",
+    "    alpha = Ul/E\n",
+    "    T = 1/f\n",
     "\n",
-    "    print('The mass of the converter is ', mass_conv, 'kg')\n",
-    "    print('Box volume ', '0.1x0.5x', L_pe, ' m^3')\n",
-    "    return\n"
+    "    L = (1-alpha)*alpha*E*T/dI\n",
+    "    Il_max = Il+dI/2\n",
+    "    Il_RMS = Il*np.sqrt(1+(dI/Il)**2/12)\n",
+    "\n",
+    "    C = alpha*T*(1-alpha)*Il/dE\n",
+    "    Ic_RMS = np.sqrt(alpha*(1-alpha))*Il*np.sqrt(1+1/(12*(1-alpha))*(dI/Il)**2)\n",
+    "\n",
+    "    I_RMS = np.sqrt(alpha)*Il*np.sqrt(1+1/12*(dI/Il)**2)\n",
+    "    I_mean = alpha*Il\n",
+    "\n",
+    "    Id_RMS = np.sqrt(1-alpha)*Il*np.sqrt(1+1/12*(dI/Il)**2)\n",
+    "    Id_mean = (1-alpha)*Il\n",
+    "\n",
+    "    dI2 = dI/2\n",
+    "\n",
+    "    #INDUCTOR\n",
+    "    #projectual hypotesis\n",
+    "    J_fil = 10.53*10**6\n",
+    "    eD_n = 0.0999999\n",
+    "    mu0 = 1.25664*10**(-6)\n",
+    "    wind_coeff = 0.33\n",
+    "    Bmax = 0.4\n",
+    "\n",
+    "    Em = 0.5*L*Il_max**2            #magnetic energy\n",
+    "    Pi0 = 3.86*eD_n**(0.344-0.226*np.log10(eD_n)-0.0355*np.log10(eD_n)**2)\n",
+    "    Dl = (2*Pi0*Em/(mu0*J_fil**2*(0.078+0.195*eD_n)**2*wind_coeff**2))**(1/5)     #inductance diameter\n",
+    "    Rl = Pi0/(mu0*Dl)                #riluctance\n",
+    "    N = round(np.sqrt(L*Rl), 0) +1    #number of turns\n",
+    "    A_fil = Il_max/J_fil            #fil surface\n",
+    "    A_bob = A_fil*N/wind_coeff\n",
+    "    B = N*Il_max/Rl/(Dl**2*np.pi*(0.82/2)**2)\n",
+    "    dB = N*dI2/Rl/(Dl**2*np.pi*(0.82/2)**2)\n",
+    "    e = eD_n*Dl\n",
+    "\n",
+    "    M1 = wind_coeff*8960*0.153*0.142**3        #0.142 is the dimension A as in picture \n",
+    "    M2 = (1-wind_coeff)*1200*0.153*0.142**3\n",
+    "    M3 = 0.487*7870*0.1472**3\n",
+    "    M_ind = M1+M2+M3    \n",
+    "\n",
+    "\n",
+    "    #CAPACITOR\n",
+    "    lam = 0.3\n",
+    "    C_n = C*kc\n",
+    "\n",
+    "    C_ref = 1000*10**(-6)\n",
+    "    D_ref = 100*10**(-3)\n",
+    "    H_ref = 155*10**(-3)\n",
+    "\n",
+    "    Dc = (C_n/C_ref*(DH/(D_ref/H_ref)))**(1/3)*D_ref        #scaling law\n",
+    "    Hc = Dc/DH\n",
+    "    Rc_ref = 3.2*10**(-3)\n",
+    "    Rc = (Dc/D_ref)**(-2)*Rc_ref\n",
+    "\n",
+    "    #losses\n",
+    "    tandel = 2*10**(-4)\n",
+    "    Pj_c = Ic_RMS**2*Rc\n",
+    "    P_di = 0.5*C_n*dE**2*2*np.pi*f*tandel\n",
+    "\n",
+    "    M_ref = 1.5\n",
+    "    M_c = M_ref*(Dc/D_ref)**2*(Hc/H_ref)\n",
+    "\n",
+    "\n",
+    "    #CHOPPER\n",
+    "\n",
+    "    #IGBT\n",
+    "    I_n = I_mean*kIGBT\n",
+    "    I_ref = 80\n",
+    "    V_ref = 600\n",
+    "    comm_ref = 8.2*10**(-3)\n",
+    "    R0_ref = 20*10**(-3)\n",
+    "    V0 = 1              #voltage drop\n",
+    "    R0 = R0_ref*(I_n/I_ref)**(-1)           #dynamic resistance\n",
+    "    J_comm = comm_ref*(I_n/I_ref)*(E/V_ref)*Il/I_n\n",
+    "    V_max = 900\n",
+    "\n",
+    "    #DIODE\n",
+    "    Id_ref = 41\n",
+    "    Vd_ref = 600\n",
+    "    R0d_ref = 15*10**(-3)\n",
+    "    commd_ref = 17.2*10**(-3)\n",
+    "    Id_n = Id_ref*(I_n/I_ref)\n",
+    "    R0d = R0d_ref*(I_n/I_ref)**(-1)\n",
+    "    Jd_comm = commd_ref*(I_n/I_ref)*(E/V_ref)*Il/Id_n\n",
+    "\n",
+    "    Lh = 0.26\n",
+    "    Wh = 0.11\n",
+    "    ef = Wh*0.025\n",
+    "    N_fin = round((Wh-ef)/(2*ef), 0)\n",
+    "    Md = 2700*Lh*(0.36*Wh**2+0.02*Wh**2*N_fin)\n",
+    "\n",
+    "    J_IGBT = V0*I_mean+R0*I_RMS**2+J_comm*f\n",
+    "    J_diode = V0*Id_mean+R0d*Id_RMS**2+Jd_comm*f\n",
+    "\n",
+    "    print('Inductor mass', M_ind)\n",
+    "    print('Capacitor mass', M_c)\n",
+    "    print('Diode mass', Md)\n",
+    "    print('IGBT losses', J_IGBT)\n",
+    "    print('diode losses', J_diode)\n",
+    "   \n",
+    "    return \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inductor Conduction Losses =  486.743287037037 W\n",
-      "IGBT Conduction Losses =  1451.2349926987922 W\n",
-      "Diode Conduction Losses =  265.1111708482676 W\n",
-      "Capacitor Conduction Losses =  78.03062962962966 W\n",
-      "IGBT Commutation Losses 2383.125 W\n",
-      "Diode Commutation Losses 383.625 W\n",
-      "The mass of the converter is  18.6 kg\n",
-      "Box volume  0.1x0.5x 0.12400000000000001  m^3\n"
+      "Inductor mass 13.871930722200318\n",
+      "Capacitor mass 2.2912112552209267\n",
+      "Diode mass 6.2857080000000005\n",
+      "IGBT losses 269.6988498759596\n",
+      "diode losses 435.5392889331474\n"
      ]
     }
    ],
    "source": [
-    "conduction_losses()\n",
-    "\n",
-    "converter_mass()"
+    "converter()\n"
    ]
   }
  ],
