--- a/Chiara_gearbox.ipynb
+++ b/Chiara_gearbox.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -92,9 +92,7 @@
      "text": [
       "for a reduction ratio =  1.5852 the weigth factor =  5.728894265839011 is in line with the graph in the article\n",
       "Gear mass =  14.0544721282594 kg\n",
-      "Mass =  0.0056458482997722905 kg\n",
-      "Lifetime =  10.5442974648446 hours - with maximum thrust\n",
-      "Lifetime =  150.617112301764 hours - with average thrust\n"
+      "The bearing is ok since the maximum static and dynamic loads, C0 =  5831.395774019897 and Cd =  4482.182889838441 are bigger than the maximum thrust  3500\n"
      ]
     }
    ],
@@ -128,30 +126,39 @@
     "    #T_ave is the average thrust (not linear but <T>^3)\n",
     "\n",
     "    C0_ref = 12.2*10**3 #18.6*10**3 \n",
-    "    C0_SL = Thrust*k/C0_ref\n",
-    "    M_SL = C0_SL**(3/2)\n",
-    "    l_SL = C0_SL**(1/2)\n",
-    "    Cd_SL = C0_SL**(1.8/2)\n",
+    "    #C0_SL = Thrust*k/C0_ref\n",
+    "    #M_SL = C0_SL**(3/2)\n",
+    "    #l_SL = C0_SL**(1/2)\n",
+    "    #Cd_SL = C0_SL**(1.8/2)\n",
     "\n",
-    "    M_ref = 0.02\n",
-    "    D_ext_ref = 24*10**(-3)\n",
+    "    #M_ref = 0.02\n",
+    "    #D_ext_ref = 24*10**(-3)\n",
     "    Cd_ref = 8.71*10**3 #12.3*10**3 \n",
     "\n",
-    "    M = M_ref*M_SL\n",
-    "    D_ext = D_ext_ref*l_SL\n",
-    "    Cd = Cd_ref*Cd_SL\n",
+    "    #M = M_ref*M_SL\n",
+    "    #D_ext = D_ext_ref*l_SL\n",
+    "    #Cd = Cd_ref*Cd_SL\n",
     "\n",
     "    \n",
-    "    L10 = (Cd/Thrust)**3*10**6/(60*2500)\n",
-    "    L10_ave = (Cd/T_ave)**3*10**6/(60*2500)\n",
+    "    #L10 = (Cd/Thrust)**3*10**6/(60*2500)\n",
+    "    #L10_ave = (Cd/T_ave)**3*10**6/(60*2500)\n",
     "\n",
-    "    print('Mass = ', M, 'kg')\n",
-    "    print('Lifetime = ', L10, 'hours - with maximum thrust')\n",
-    "    print('Lifetime = ', L10_ave, 'hours - with average thrust')\n",
+    "\n",
+    "    L10_f = 200\n",
+    "    Cd = T_ave*(L10_f*60*2500/(10**6))**(1/3)\n",
+    "    Cd_SL = Cd/Cd_ref\n",
+    "    C0_SL = Cd_SL**(2/1.8)\n",
+    "    C0 = C0_SL*C0_ref\n",
+    "\n",
+    "\n",
+    "    if C0>Thrust:\n",
+    "        print('The bearing is ok since the maximum available static and dynamic loads, C0 = ', C0,'and Cd = ', Cd, 'are bigger than the maximum thrust ', Thrust)\n",
+    "    else:\n",
+    "        print('The bearing fails')\n",
     "    \n",
     "    return \n",
     "\n",
-    "bearing(3500, 1442.5, 1.5)\n",
+    "bearing(3500, 1442.5, 1)\n",
     "\n"
    ]
   }
